# ted

./: .clang-format  .gitignore  README.md  meson.build  ted.cpp
